--- a/src/app/form/editor/input-details/input-details.component.html
+++ b/src/app/form/editor/input-details/input-details.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <nb-card>
+    <nb-card size="medium">
         <nb-card-header>{{input.name}} Properties</nb-card-header>
         <nb-card-body>
             <input type="text" fullWidth placeholder="Label" nbInput formControlName="label">
